--- a/.env
+++ b/.env
@@ -6,9 +6,12 @@ CLOUDINARY_CLOUD_NAME=dabkemyqs
 CLOUDINARY_API_KEY=197942595615968
 CLOUDINARY_API_SECRET=pbxxwcWltfFryX9B2OmTho5U7YY
 
-Email Configuration (Nodemailer)
+
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_SECURE=false
 EMAIL_USER=duquetb101@gmail.com
 EMAIL_PASSWORD=esbpwnjjbiyjipvp
+
+
+EXPO_PUBLIC_API_URL=https://rmerchback.vercel.app/api
